# PaddleOCR-ncnn

./: .gitignore  CMakeLists.txt  README.md  config.json
.github/workflows/: build.yml
c#Demo/: Program.cs
c#Demo/ppocr/: config.json
models/: PP_OCRv6_medium_det.param  PP_OCRv6_medium_rec.param  PP_OCRv6_tiny_det.param  PP_OCRv6_tiny_rec.param  ppocr_keys_v6.txt  ppocr_keys_v6_tiny.txt
src/: angle_net.cpp  angle_net.h  common.h  config.h  crnn_net.cpp  crnn_net.h  db_net.cpp  db_net.h  main.cpp  ocr_bridge.cpp  ocr_bridge.h  ocr_engine.cpp  ocr_engine.h  utils.cpp  utils.h
